--- a/intro.ipynb
+++ b/intro.ipynb
@@ -267,8 +267,6 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: separate Happy and Teddy\n",
-    "\n",
     "fig, ax = plt.subplots(2, 2, figsize=(10, 10))\n",
     "for j, col in enumerate(['z_spec', 'mag_r']):\n",
     "    for i, lett in enumerate(['A', 'B', 'C', 'D']):\n",
@@ -350,7 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start with a demonstration of how pzflow makes a model of $p(z, \\vec{d}$ from its own demo data."
+    "Let's start with a demonstration of how pzflow makes a model of $p(z, \\vec{d})$ from its own demo data."
    ]
   },
   {
@@ -800,7 +798,8 @@
     "### Estimating photo-$z$ posterior PDFs with FlexCode\n",
     "\n",
     "A demonstration of `FlexCode` in the context of photo-$z$s can be found in [Dalmasso, et al 2019](https://arxiv.org/abs/1908.11523), with demos in `R` published on [GitHub](https://github.com/Mr8ND/cdetools_applications).\n",
-    "We'll demonstrate it on the pzflow-based samples generated from the Happy/Teddy data sets.*italicized text*\n",
+    "We'll demonstrate it on the pzflow-based samples generated from the Happy/Teddy data sets.\n",
+    "**TODO: save the outputs for convenience**\n",
     "\n",
     "_This content is adapted from FlexCode's [Teddy tutorial](https://github.com/tpospisi/FlexCode/blob/master/tutorial/Flexcode-tutorial-teddy.ipynb), written by Nic Dalmasso (CMU)._\n",
     "_The same functionality can also be accessed through a `rail.Estimator()` object; see [tutorial](https://github.com/LSSTDESC/RAIL/blob/master/examples/estimation/RAIL_estimation_demo.ipynb) written by Sam Schmidt (UC Davis)._"
@@ -1235,6 +1234,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chosen = np.argmax(RMSEs)\n",
+    "chosen_bias = np.argmax(RMSEs_bias)\n",
+    "\n",
+    "plt.plot(y_grid_bias, cde_test_bias[chosen], label='Estimated posterior (biased training set)')\n",
+    "plt.plot(y_grid, cde_test[chosen], label='Estimated posterior (unbiased training set)')\n",
+    "plt.plot(grid, posteriors_test[chosen], label='True posterior')\n",
+    "plt.axvline(y_test[chosen], 0, 1, c='C3', label='True redshift')\n",
+    "plt.legend()\n",
+    "plt.xlabel(\"redshift\")\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "DTwhvAxUxVnf"
@@ -1242,7 +1259,8 @@
    "source": [
     "### Your turn!\n",
     "\n",
-    "How else can we quantify the performance of estimators of aleatoric uncertainty?\n",
+    "These are just a few metrics; \n",
+    "how else can we quantify the performance of estimators of aleatoric uncertainty?\n",
     "\n",
     "**CHALLENGE**: Apply and visualize the local metrics of [Zhao, Dalmasso, Izbicki & Lee, 2021](https://arxiv.org/abs/2102.10473), or any other metrics not included in this demo; the [cde-diagnostics tutorial](https://github.com/zhao-david/CDE-diagnostics/blob/main/tutorial/tutorial-cde-diagnostics.ipynb), written by David Zhao (CMU), may be a good starting point.\n",
     "\n",
