removing cruft, tuning parameters

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -404,7 +404,7 @@
     "# set the inverse softplus parameters, estimated\n",
     "# to ensure that sampled redshifts are positive\n",
     "column_idx = 0\n",
-    "sharpness = 5\n",
+    "sharpness = 1\n",
     "n_epoch = 125\n",
     "\n",
     "# construct our bijector\n",
@@ -823,10 +823,14 @@
     "max_basis = 31           # Maximum number of basis. If the model is not tuned,\n",
     "                         # max_basis is set as number of basis\n",
     "\n",
+    "n_estimators = 100\n",
+    "criterion = 'mse'\n",
+    "max_depth = 5\n",
+    "    \n",
     "# Regression Parameters \n",
     "# If a list is passed for any parameter automatic 5-fold CV is used to\n",
     "# determine the best parameter combination.\n",
-    "params = {\"k\": 5}#[5, 10, 15, 20]}       # A dictionary with method-specific regression parameters."
+    "params = {\"k\": 20}#[5, 10, 15, 20]}       # A dictionary with method-specific regression parameters."
    ]
   },
   {
@@ -1231,24 +1235,6 @@
     "plt.hist(np.log(RMSEs_bias), alpha=0.5, bins=100, label='biased', density=True)\n",
     "plt.xlabel('RMSE')\n",
     "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chosen = np.argmax(RMSEs)\n",
-    "chosen_bias = np.argmax(RMSEs_bias)\n",
-    "\n",
-    "plt.plot(y_grid_bias, cde_test_bias[chosen], label='Estimated posterior (biased training set)')\n",
-    "plt.plot(y_grid, cde_test[chosen], label='Estimated posterior (unbiased training set)')\n",
-    "plt.plot(grid, posteriors_test[chosen], label='True posterior')\n",
-    "plt.axvline(y_test[chosen], 0, 1, c='C3', label='True redshift')\n",
-    "plt.legend()\n",
-    "plt.xlabel(\"redshift\")\n",
-    "plt.show()"
    ]
   },
   {
