--- a/intro.ipynb
+++ b/intro.ipynb
@@ -130,6 +130,7 @@
     "# !pip install cdetools\n",
     "# !pip install corner\n",
     "# !pip install FlexCode\n",
+    "# !pip install jax\n",
     "# !pip install pzflow\n",
     "# !pip install sklearn\n",
     "# !pip install xgboost==0.90"
@@ -1206,6 +1207,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.plot(y_grid_bias, cde_test_bias[chosen], label='Estimated posterior (biased training set)')\n",
+    "# plt.plot(y_grid, cde_test[chosen], label='Estimated posterior (unbiased training set)')\n",
+    "# plt.plot(grid, posteriors_test[chosen], label='True posterior')\n",
+    "# plt.axvline(y_test[chosen], 0, 1, c='C3', label='True redshift')\n",
+    "# plt.legend()\n",
+    "# plt.xlabel(\"redshift\")\n",
+    "# plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "YR96wyRGPerk"
@@ -1251,6 +1267,24 @@
     "**CHALLENGE**: Apply and visualize the local metrics of [Zhao, Dalmasso, Izbicki & Lee, 2021](https://arxiv.org/abs/2102.10473), or any other metrics not included in this demo; the [cde-diagnostics tutorial](https://github.com/zhao-david/CDE-diagnostics/blob/main/tutorial/tutorial-cde-diagnostics.ipynb), written by David Zhao (CMU), may be a good starting point.\n",
     "\n",
     "**CHALLENGE**: Use the differences between estimated and true photo-$z$ posterior PDFs as a function of photometry to isolate the implicit prior of epistemic uncertainty from the aleatoric uncertainty."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### local visualization of metrics of true posteriors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(x_test[:,1], x_test[:,3], c=np.log(KLDs), cmap='viridis_r', s=1, alpha=0.5)\n",
+    "plt.xlim(z_min, z_max)\n",
+    "plt.colorbar()"
    ]
   },
   {
