fixing broken link, commenting out cruft

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -311,7 +311,7 @@
     "    corner.corner(happy[lett][['u-g', 'g-r', 'r-i', 'i-z']], fig=fig, color=colorcycle[i], alpha=0.25)\n",
     "    \n",
     "fig = corner.corner(teddy['A'][['u-g', 'g-r', 'r-i', 'i-z']], color='k', alpha=0.25)\n",
-    "for i, lett in enumerate(['B', 'C', 'D']):\n",
+    "for i, lett in enumerate(['B']):#, 'C', 'D']):\n",
     "    corner.corner(teddy[lett][['u-g', 'g-r', 'r-i', 'i-z']], fig=fig, color=colorcycle[i], alpha=0.25)"
    ]
   },
@@ -373,6 +373,17 @@
     "# convert magnitudes to a reference magnitude and colors\n",
     "data[:, 1], data[:, 2:] = data[:, 3], np.diff(data[:,1:])\n",
     "\n",
+    "corner.corner(data, alpha=0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "ZxmVog1_kTqu"
+   },
+   "outputs": [],
+   "source": [
     "# standard scale the reference magnitude and colors\n",
     "data[:, 1:] = (data[:, 1:] - data[:, 1:].mean(axis=0))/data[:, 1:].std(axis=0)\n",
     "\n",
@@ -549,59 +560,59 @@
    },
    "outputs": [],
    "source": [
-    "# full_data = {'happy': happy, 'teddy': teddy}\n",
-    "# n_out = 1000\n",
+    "full_data = {'teddy': teddy}#, 'happy': happy\n",
+    "n_out = 1000\n",
     "\n",
-    "# for name, dat in full_data.items():\n",
-    "#     for lett in ['A', 'B', 'C', 'D']:\n",
-    "#         print(name+lett)\n",
-    "#         print(dat[lett].columns)\n",
-    "#         dat[lett] = dat[lett][['z_spec', 'mag_r', 'u-g', 'g-r', 'r-i', 'i-z']]\n",
-    "#         dat[lett] = dat[lett][(dat[lett]['z_spec'] > z_min) & (dat[lett]['z_spec'] < z_max) & (dat[lett]['mag_r'] > r_min) & (dat[lett]['mag_r'] < r_max)]\n",
-    "#         dat[lett] = dat[lett].rename(columns={'z_spec': 'redshift', 'mag_r': 'r'})\n",
+    "for name, dat in full_data.items():\n",
+    "    for lett in ['A', 'B']:#, 'C', 'D']:\n",
+    "        print(name+lett)\n",
+    "        print(dat[lett].columns)\n",
+    "        dat[lett] = dat[lett][['z_spec', 'mag_r', 'u-g', 'g-r', 'r-i', 'i-z']]\n",
+    "        dat[lett] = dat[lett][(dat[lett]['z_spec'] > z_min) & (dat[lett]['z_spec'] < z_max) & (dat[lett]['mag_r'] > r_min) & (dat[lett]['mag_r'] < r_max)]\n",
+    "        dat[lett] = dat[lett].rename(columns={'z_spec': 'redshift', 'mag_r': 'r'})\n",
     "  \n",
-    "#         data = dat[lett].values\n",
+    "        data = dat[lett].values\n",
     "\n",
-    "#     # standard scale the reference magnitude and colors\n",
-    "#         data[:, 1:] = (data[:, 1:] - data[:, 1:].mean(axis=0))/data[:, 1:].std(axis=0)\n",
+    "    # standard scale the reference magnitude and colors\n",
+    "        data[:, 1:] = (data[:, 1:] - data[:, 1:].mean(axis=0))/data[:, 1:].std(axis=0)\n",
     "\n",
-    "#     # calculate the mean and standard deviations of thefrom sklearn.cross_validation import train_test_split dimensions\n",
-    "#     # note that on this side of the color transform, we are working\n",
-    "#     # in color space, so I calculate the mean and std dev of these \n",
-    "#     # variables instead of the raw magnitudes\n",
-    "#         means = data[:, 1:].mean(axis=0)\n",
-    "#         stds = data[:, 1:].std(axis=0)\n",
+    "    # calculate the mean and standard deviations of thefrom sklearn.cross_validation import train_test_split dimensions\n",
+    "    # note that on this side of the color transform, we are working\n",
+    "    # in color space, so I calculate the mean and std dev of these \n",
+    "    # variables instead of the raw magnitudes\n",
+    "        means = data[:, 1:].mean(axis=0)\n",
+    "        stds = data[:, 1:].std(axis=0)\n",
     "\n",
-    "#     # save the new set\n",
-    "#         data = pd.DataFrame(data, columns=('redshift', 'r', 'u-g', 'g-r', 'r-i', 'i-z'))\n",
+    "    # save the new set\n",
+    "        data = pd.DataFrame(data, columns=('redshift', 'r', 'u-g', 'g-r', 'r-i', 'i-z'))\n",
     "\n",
-    "#     # construct our bijector\n",
-    "#   # by chaining all these layers\n",
-    "#         bijector = Chain(\n",
-    "#           InvSoftplus(column_idx, sharpness),\n",
-    "#           StandardScaler(means[column_idx], stds[column_idx]),\n",
-    "#           RollingSplineCoupling(nlayers=1, n_conditions=len(data.columns)-1),\n",
-    "#         )\n",
+    "    # construct our bijector\n",
+    "  # by chaining all these layers\n",
+    "        bijector = Chain(\n",
+    "          InvSoftplus(column_idx, sharpness),\n",
+    "          StandardScaler(means[column_idx], stds[column_idx]),\n",
+    "          RollingSplineCoupling(nlayers=1, n_conditions=len(data.columns)-1),\n",
+    "        )\n",
     "\n",
-    "#   # To create the conditional flow, we have to provide\n",
-    "#   # 1. The names of the data columns\n",
-    "#   # 2. The bijector\n",
-    "#   # 3. The names of the conditional columns\n",
-    "#         flow = Flow(data.columns[:1], bijector, conditional_columns=data.columns[1:])\n",
+    "  # To create the conditional flow, we have to provide\n",
+    "  # 1. The names of the data columns\n",
+    "  # 2. The bijector\n",
+    "  # 3. The names of the conditional columns\n",
+    "        flow = Flow(data.columns[:1], bijector, conditional_columns=data.columns[1:])\n",
     "\n",
-    "#         losses = flow.train(data, epochs=n_epoch, verbose=False)\n",
+    "        losses = flow.train(data, epochs=n_epoch, verbose=False)\n",
     "\n",
-    "#         samples = flow.sample(1, conditions=data.sample(n_out), seed=0)\n",
+    "        samples = flow.sample(1, conditions=data.sample(n_out), seed=0)\n",
     "\n",
-    "#         z = samples['redshift']\n",
-    "#         z.to_csv(name+lett+'redshifts.csv', index=False)\n",
+    "        z = samples['redshift']\n",
+    "        z.to_csv(name+lett+'redshifts.csv', index=False)\n",
     "\n",
-    "#         phot = samples[['r', 'u-g', 'g-r', 'r-i', 'i-z']]\n",
-    "#         phot.to_csv(name+lett+'photometry.csv', index=False)\n",
+    "        phot = samples[['r', 'u-g', 'g-r', 'r-i', 'i-z']]\n",
+    "        phot.to_csv(name+lett+'photometry.csv', index=False)\n",
     "\n",
-    "#         posteriors = flow.posterior(samples, column=\"redshift\", grid=grid)\n",
-    "#         with open(name+lett+'posteriors.csv', 'wb') as fn:\n",
-    "#             jnp.save(fn, posteriors)"
+    "        posteriors = flow.posterior(samples, column=\"redshift\", grid=grid)\n",
+    "        with open(name+lett+'posteriors.csv', 'wb') as fn:\n",
+    "            jnp.save(fn, posteriors)"
    ]
   },
   {
@@ -616,7 +627,7 @@
     "As one of RAIL's purposes is to conduct one such experiment, the `rail.creation` subpackage not only wraps `pzflow` (the above example can be executed just as easily through the RAIL interface) but also includes physically motivated forms of systematic discrepancy between training and test sets that can be applied to a tunable degree to create \"degraded\" versions of an original $p(z, \\vec{d})$ space.\n",
     "So, for completeness, let's demonstrate how to create a new $p'(z, \\vec{d})$ from an existing $p'(z, \\vec{d})$ using `rail.creation`.\n",
     "\n",
-    "_This content is taken directly from RAIL's [degradation demo](), written by John Franklin Crenshaw (UW)._"
+    "_This content is taken directly from RAIL's [degradation demo](https://github.com/LSSTDESC/RAIL/blob/master/examples/creation/degradation-demo.ipynb), written by John Franklin Crenshaw (UW)._"
    ]
   },
   {
@@ -627,9 +638,9 @@
    },
    "outputs": [],
    "source": [
-    "from pzflow.examples import example_flow\n",
-    "from rail.creation import Creator, engines\n",
-    "from rail.creation.degradation import InvRedshiftIncompleteness, LineConfusion"
+    "# from pzflow.examples import example_flow\n",
+    "# from rail.creation import Creator, engines\n",
+    "# from rail.creation.degradation import InvRedshiftIncompleteness, LineConfusion"
    ]
   },
   {
@@ -648,9 +659,9 @@
    },
    "outputs": [],
    "source": [
-    "flow = engines.FlowEngine(example_flow())\n",
-    "creator = Creator(flow)\n",
-    "degraded_creator = Creator(flow, degrader=InvRedshiftIncompleteness(0.8))"
+    "# flow = engines.FlowEngine(example_flow())\n",
+    "# creator = Creator(flow)\n",
+    "# degraded_creator = Creator(flow, degrader=InvRedshiftIncompleteness(0.8))"
    ]
   },
   {
@@ -661,8 +672,18 @@
    },
    "outputs": [],
    "source": [
-    "samples = creator.sample(100000)\n",
-    "degraded_samples = degraded_creator.sample(100000)"
+    "# samples = creator.sample(100000)\n",
+    "# degraded_samples = degraded_creator.sample(100000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fig = corner.corner(samples, color='b', alpha=0.25)\n",
+    "# corner.corner(degraded_samples, fig=fig, color='r', alpha=0.1)"
    ]
   },
   {
@@ -678,12 +699,12 @@
    },
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(4.5,4.5), dpi=100)\n",
-    "ax.hist(samples['redshift'], bins=20, range=(0,2.3), histtype='step', label=\"Unbiased samples\")\n",
-    "ax.hist(degraded_samples['redshift'], bins=20, range=(0,2.3), histtype='step', label=\"Degraded samples\")\n",
-    "ax.legend()\n",
-    "ax.set(xlabel=\"Redshift\", ylabel=\"Number of galaxies\", xlim=(0,2.3))\n",
-    "plt.show()"
+    "# fig, ax = plt.subplots(figsize=(4.5,4.5), dpi=100)\n",
+    "# ax.hist(samples['redshift'], bins=20, range=(0,2.3), histtype='step', label=\"Unbiased samples\")\n",
+    "# ax.hist(degraded_samples['redshift'], bins=20, range=(0,2.3), histtype='step', label=\"Degraded samples\")\n",
+    "# ax.legend()\n",
+    "# ax.set(xlabel=\"Redshift\", ylabel=\"Number of galaxies\", xlim=(0,2.3))\n",
+    "# plt.show()"
    ]
   },
   {
@@ -702,13 +723,13 @@
    },
    "outputs": [],
    "source": [
-    "def OxygenLineConfusion(data, seed=None):\n",
-    "    OII = 3727\n",
-    "    OIII = 5007\n",
+    "# def OxygenLineConfusion(data, seed=None):\n",
+    "#     OII = 3727\n",
+    "#     OIII = 5007\n",
     "    \n",
-    "    data = LineConfusion(true_wavelen=OII, wrong_wavelen=OIII, frac_wrong=0.02)(data, seed)\n",
-    "    data = LineConfusion(true_wavelen=OIII, wrong_wavelen=OII, frac_wrong=0.01)(data, seed)\n",
-    "    return data"
+    "#     data = LineConfusion(true_wavelen=OII, wrong_wavelen=OIII, frac_wrong=0.02)(data, seed)\n",
+    "#     data = LineConfusion(true_wavelen=OIII, wrong_wavelen=OII, frac_wrong=0.01)(data, seed)\n",
+    "#     return data"
    ]
   },
   {
@@ -719,9 +740,9 @@
    },
    "outputs": [],
    "source": [
-    "flow = engines.FlowEngine(example_flow())\n",
-    "creator = Creator(flow)\n",
-    "degraded_creator = Creator(flow, degrader=OxygenLineConfusion)"
+    "# flow = engines.FlowEngine(example_flow())\n",
+    "# creator = Creator(flow)\n",
+    "# degraded_creator = Creator(flow, degrader=OxygenLineConfusion)"
    ]
   },
   {
@@ -732,8 +753,8 @@
    },
    "outputs": [],
    "source": [
-    "samples = creator.sample(100000, seed=0)\n",
-    "degraded_samples = degraded_creator.sample(100000, seed=0)"
+    "# samples = creator.sample(100000, seed=0)\n",
+    "# degraded_samples = degraded_creator.sample(100000, seed=0)"
    ]
   },
   {
@@ -749,10 +770,10 @@
    },
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(4.5,4.5), dpi=100)\n",
-    "ax.scatter(samples[\"redshift\"], degraded_samples[\"redshift\"], s=0.1)\n",
-    "ax.set(xlabel=\"True spec-z\", ylabel=\"Erroneous spec-z\")\n",
-    "plt.show()"
+    "# fig, ax = plt.subplots(figsize=(4.5,4.5), dpi=100)\n",
+    "# ax.scatter(samples[\"redshift\"], degraded_samples[\"redshift\"], s=0.1)\n",
+    "# ax.set(xlabel=\"True spec-z\", ylabel=\"Erroneous spec-z\")\n",
+    "# plt.show()"
    ]
   },
   {
